--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory=./ansible_hosts
-remote_user=ec2-remote_user
+remote_user=ec2-user
 private_key_file=~/aws/aws_keys/friday-0211.pem
 host_key_checking=False
 retry_files_enabled=False
