removed the warnings in the cmd

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,5 @@ remote_user=ec2-user
 private_key_file=~/aws/aws_keys/friday-0211.pem
 host_key_checking=False
 retry_files_enabled=False
+# to remove the interpreter warnings in the cmd
+interpreter_python=auto_silent
