--- a/playbooks/01-ping.yml
+++ b/playbooks/01-ping.yml
@@ -4,3 +4,5 @@
   tasks:
   - name: Ping All Servers
     action: ping
+    # you can add as many actions as needed to this play
+    debug: msg="If you can see me, then I ran successfully."
