executing shell commands on all groups and the qa group

--- a/playbooks/02-shell-commands.yml
+++ b/playbooks/02-shell-commands.yml
@@ -1,1 +1,9 @@
 ---
+- hosts: all
+  tasks:
+  - name: Execute Shell Commands
+    shell: uname
+  - debug: msg="Found the VM's name!"
+- hosts: qa
+  tasks:
+  - debug: msg="QA now, dev group's servers later!"
