edited the shell command playbook

--- a/playbooks/02-shell-commands.yml
+++ b/playbooks/02-shell-commands.yml
@@ -1,9 +1,6 @@
 ---
-- hosts: all
+- hosts: dev
   tasks:
   - name: Execute Shell Commands
     shell: uname
   - debug: msg="Found the VM's name!"
-- hosts: qa
-  tasks:
-  - debug: msg="QA now, dev group's servers later!"
