to print the result of a shell command, a register has to be added

--- a/playbooks/02-shell-commands.yml
+++ b/playbooks/02-shell-commands.yml
@@ -3,4 +3,5 @@
   tasks:
   - name: Execute Shell Commands
     shell: uname
-  - debug: msg="Found the VM's name!"
+    registry: uname_result
+  - debug: msg="{{uname_result}}"
