changed registry to register as it should have been

--- a/playbooks/02-shell-commands.yml
+++ b/playbooks/02-shell-commands.yml
@@ -3,5 +3,5 @@
   tasks:
   - name: Execute Shell Commands
     shell: uname
-    registry: uname_result
+    register: uname_result
   - debug: msg="{{uname_result}}"
