writing the tasks to be executed

--- a/playbooks/03-variables.yml
+++ b/playbooks/03-variables.yml
@@ -2,4 +2,6 @@
 - hosts: dev
   # here you place your variables
   vars:
-  
+    variable1: "PlayBookValue"
+  tasks:
+    - name: Execute Shell Commands
