setup the variable playbook

--- a/playbooks/03-variables.yml
+++ b/playbooks/03-variables.yml
@@ -5,3 +5,5 @@
     variable1: "PlayBookValue"
   tasks:
     - name: Execute Shell Commands
+    register: uname_result
+    - debug: msg="{{ uname_result }}"
