linked the variables file to the variables playbook

--- a/playbooks/03-variables.yml
+++ b/playbooks/03-variables.yml
@@ -1,5 +1,8 @@
 ---
 - hosts: dev
+# link the variables.yml file path
+vars_file:
+  - variables.yml
   # here you place your variables
   vars:
     variable1: "PlayBookValue"
