--- a/playbooks/03-variables.yml
+++ b/playbooks/03-variables.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: dev
 # link the variables.yml file path
-vars_file:
+  vars_files:
   - variables.yml
   # here you place your variables
   vars:
