corrected the names

--- a/playbooks/04-facts.yml
+++ b/playbooks/04-facts.yml
@@ -5,7 +5,7 @@
     # below is one of the facts ansible gathers
       debug: msg="{{ ansible_kernel }}"
     # you can gather more facts about a server
-    - name: kernel
+    - name: Distribution
       debug: msg="{{ ansible_distribution }}"
-    - name: kernel
+    - name: Hostname
       debug: msg="{{ansible_hostname}}"
