--- a/playbooks/04-facts.yml
+++ b/playbooks/04-facts.yml
@@ -10,4 +10,6 @@
     - name: Hostname
       debug: msg="{{ansible_hostname}}"
     # you can debug a playbook by removing the name, replacing msg with var and removing the apostrophe and curly braces around the value
-      debug: var=ansible-architecture
+      debug: var=ansible_architecture
+      debug: var=ansible_processor_count
+      debug: var=ansible_os_family
