added hyphens to the debuggers

--- a/playbooks/04-facts.yml
+++ b/playbooks/04-facts.yml
@@ -8,8 +8,8 @@
     - name: Distribution
       debug: msg="{{ ansible_distribution }}"
     - name: Hostname
-      debug: msg="{{ansible_hostname}}"
+    - debug: msg="{{ansible_hostname}}"
     # you can debug a playbook by removing the name, replacing msg with var and removing the apostrophe and curly braces around the value
-      debug: var=ansible_architecture
-      debug: var=ansible_processor_count
-      debug: var=ansible_os_family
+    - debug: var=ansible_architecture
+    - debug: var=ansible_processor_count
+    - debug: var=ansible_os_family
