--- a/playbooks/05-install-apache.yml
+++ b/playbooks/05-install-apache.yml
@@ -1,15 +1,9 @@
 ---
-- hosts: qa
+# install it on all the servers
+- hosts: dev
   tasks:
-    - name: Kernel
-    # below is one of the facts ansible gathers
-      debug: msg="{{ ansible_kernel }}"
-    # you can gather more facts about a server
-    - name: Distribution
-      debug: msg="{{ ansible_distribution }}"
-    - name: Hostname
-      debug: msg="{{ansible_hostname}}"
-    # you can debug a playbook by removing the name, replacing msg with var and removing the apostrophe and curly braces
-    - debug: var=ansible_architecture
-    - debug: var=ansible_processor_count
-    - debug: var=ansible_os_family
+  # yum is a package manager
+    - yum:
+        name:
+          - httpd
+        state: present
