running apache as a servive

--- a/playbooks/05-install-apache.yml
+++ b/playbooks/05-install-apache.yml
@@ -7,3 +7,5 @@
         name:
           - httpd
         state: present
+    # now run it as a service
+    - service: name=httpd state=started enabled=yes
