--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-# inventory=./ansible_hosts
+# inventory=./ansible_hosts again
 inventory=inventory/01_aws_ec2.yml
 remote_user=ec2-user
 private_key_file=~/aws/aws_keys/friday-0211.pem
