edited the config playbook

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-# inventory=./ansible_hosts again
+# trying to configure the credentials text file in the root directory
+# inventory=./ansible_hosts
 inventory=inventory/01_aws_ec2.yml
 remote_user=ec2-user
 private_key_file=~/aws/aws_keys/friday-0211.pem
